Revision history for perl distribution Mojo-Redis

3.25 Not Released
 - Fix handling undef() in _process_...() methods #56

3.24 2019-05-07T22:25:50+0700
 - Fix PubSub->keyspace_listen() #42

3.23 2019-05-04T21:12:25+0700
 - Fix compatibility with Mojolicious 8.15 #46

3.22 2019-04-24T12:32:18+0700
 - Forgot to update protocol parser for Mojo::Redis::Cache after 3.21 #43
 - Fix broken link in Mojo::Redis::Connection #44
   Contributor: Mohammad S Anwar

3.21 2019-04-16T09:58:44+0700
 - Changed default protocol parser to Protocol::Redis::XS #43

3.20 2019-04-04T10:31:03+0700
 - Use Protocol::Redis::Faster instead of Protocol::Redis #38
 - Only decode data from bulk string responses #40
 - Fix allowing custom URL object with userinfo in constructor #41

3.19 2019-01-31T13:03:11+0900
 - Add support for encoding and decoding of JSON messages in Mojo::Redis::PubSub

3.18 2019-01-31T12:39:46+0900
 - Add reconnect logic for Mojo::Redis::PubSub #37
 - Add CAVEATS for Protocol::Redis::XS #38
 - Changed default protocol to Protocol::Redis #38
 - Updated documentation to use nicer variable names

3.17 2018-12-17T19:03:43+0900
 - Made connection-lost.t more robust
 - Add xread_structured() method
 - Add failing test for xread and Protocol::Redis::XS

3.16 2018-12-14T19:39:18+0900
 - Fix $db object from reconnecting #33

3.15 2018-12-13T08:24:10+0900
 - Fix connection-lost.t in other languages #30
 - Bumped Mojolicious version for Mojo::Promise support #32

3.14 2018-12-12T23:10:30+0900
 - Fix fork-safity for the blocking connection #28
 - Fix connection-lost.t in other languages #29

3.13 2018-12-11T14:44:45+0900
 - Fix rejecting promises when connection is lost #24
 - Fix connection.t when using a remote server #25
 - Fix cursor.t to use TEST_ONLINE #26 #27
   Contributor: Alexander Karelas

3.12 2018-12-07T12:04:19+0900
 - Add support for negative cache expire for serving stale data
 - Add destructor to Connection object to clean up connections