@@ -2,6 +2,8 @@ Revision history for perl distribution Mojo-Redis
 
 3.25 Not Released
  - Fix handling undef() in _process_...() methods #56
+ - Fix some leaks in Mojo::Redis::PubSub
+ - Add Mojo::Redis::PubSub->notify_p()
 
 3.24 2019-05-07T22:25:50+0700
  - Fix PubSub->keyspace_listen() #42
